--- a/RecipeApp/Screens/Main.xaml
+++ b/RecipeApp/Screens/Main.xaml
@@ -1,26 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
              x:Class="RecipeApp.Screens.Main"
              Title="Main">
     <StackLayout>
         <!-- SearchBar -->
-        <SearchBar x:Name="searchBar" Placeholder="Ara..." BackgroundColor="White" />
+        <SearchBar x:Name="searchBar" Placeholder="Ara..." BackgroundColor="White"/>
 
         <!-- Diğer içerikler -->
         <ScrollView>
             <!-- Yemek kutularını içeren StackLayout -->
-            <StackLayout x:Name="yemekStackLayout">
-                <Frame CornerRadius="16" Margin="10">
+            <StackLayout>
+                <Frame ClassId="Karnıyarık" CornerRadius="16" Margin="10">
                     <Grid>
                         <!-- Sol tarafta yemek görseli -->
                         <Image Source="karniyarik.jpg" Aspect="AspectFill" HeightRequest="100" WidthRequest="100" HorizontalOptions="Start" />
                         
                         <!-- Sağ tarafta yemek ismi -->
-                        <Label Text="Karnıyarık" VerticalOptions="Center" HorizontalOptions="StartAndExpand" Margin="150,0,0,0" />
+                        <Label Text="karnıyarık" VerticalOptions="Center" HorizontalOptions="StartAndExpand" Margin="150,0,0,0" />
                     </Grid>
+                    <Frame.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                    </Frame.GestureRecognizers>
                 </Frame>
-                <Frame CornerRadius="16" Margin="10">
+
+                <Frame ClassId="kurufasulye" CornerRadius="16" Margin="10">
                     <Grid>
                         <!-- Sol tarafta yemek görseli -->
                         <Image Source="kurufasülye.jpg" Aspect="AspectFill" HeightRequest="100" WidthRequest="100" HorizontalOptions="Start" />
@@ -29,7 +36,7 @@
                         <Label Text="Kuru Fasülye" VerticalOptions="Center" HorizontalOptions="StartAndExpand" Margin="150,0,0,0"/>
                     </Grid>
                 </Frame>
-                <Frame CornerRadius="16" Margin="10">
+                <Frame ClassId="mantı" CornerRadius="16" Margin="10">
                     <Grid>
                         <!-- Sol tarafta yemek görseli -->
                         <Image Source="mantı.jpg" Aspect="AspectFill" HeightRequest="100" WidthRequest="100" HorizontalOptions="Start" />
@@ -38,7 +45,12 @@
                         <Label Text="Mantı" VerticalOptions="Center" HorizontalOptions="StartAndExpand" Margin="150,0,0,0"/>
                     </Grid>
                 </Frame>
+                <Button Text="Kaydet" x:Name="SaveButton">
+
+
+                </Button>
                 
+              
                 
                 <!-- Diğer yemek kutularını ekleyebilirsiniz -->
             </StackLayout>
