--- a/RecipeApp/Screens/Kurufasulye.xaml
+++ b/RecipeApp/Screens/Kurufasulye.xaml
@@ -3,10 +3,36 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RecipeApp.Screens.Kurufasulye"
              Title="Kurufasulye">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <StackLayout>
+        <!-- Üst kısım - Yemek Resmi -->
+        <Image Source="kurufasülye.jpg" Aspect="AspectFill" HeightRequest="400"/>
+
+        <!-- Ortada - Yemek Adı -->
+        <Label Text="Yemek Adı" FontSize="24" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"/>
+
+        <!-- Alt kısım - Malzemeler ve Butonlar -->
+        <StackLayout>
+            <!-- Malzemeler Listesi -->
+            <ListView x:Name="IngredientsListView">
+                <ListView.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>Malzeme 1</x:String>
+                        <x:String>Malzeme 2</x:String>
+                        <x:String>Malzeme 3</x:String>
+                        <!-- Diğer malzemeler -->
+                    </x:Array>
+                </ListView.ItemsSource>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout Orientation="Horizontal">
+                                <Label Text="{Binding .}" VerticalOptions="CenterAndExpand"/>
+                                <Button Text="Ekle" Command="{Binding AddButtonCommand}" VerticalOptions="CenterAndExpand"/>
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
+    </StackLayout>
 </ContentPage>
