--- a/RecipeApp/Screens/Main.xaml
+++ b/RecipeApp/Screens/Main.xaml
@@ -17,6 +17,7 @@
                     <ViewCell>
                         <StackLayout Orientation="Horizontal" Padding="10">
                             <Label Text="{Binding Name}" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" />
+                            <Button Text="Sil" Clicked="DeleteRecipeClicked" CommandParameter="{Binding Id}" HorizontalOptions="End" />
                         </StackLayout>
                     </ViewCell>
                 </DataTemplate>
