--- a/RecipeApp/Screens/RecipeDetailPage.xaml
+++ b/RecipeApp/Screens/RecipeDetailPage.xaml
@@ -13,5 +13,15 @@
         <Label Text="Yemek Tarifi:" FontSize="18" FontAttributes="Bold" Margin="0,10,0,5" />
         <Label Text="{Binding Instructions}" />
 
+        <StackLayout VerticalOptions="EndAndExpand">
+        <Label Text="Geri Sayım Aracı:" FontSize="18" FontAttributes="Bold" Margin="0,10,0,5" />
+        <TimePicker x:Name="countdownPicker" Format="t" />
+        <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
+            <Button Text="Başlat" WidthRequest="133" Clicked="StartCountdown" HorizontalOptions="CenterAndExpand" />
+            <Button Text="Durdur" WidthRequest="133" Clicked="StopCountdown"  HorizontalOptions="CenterAndExpand" />
+            <Button Text="Sıfırla" WidthRequest="133" Clicked="ResetCountdown" BackgroundColor="Red" HorizontalOptions="CenterAndExpand" />
+        </StackLayout>
+        <Label x:Name="countdownLabel" Text="" FontSize="20" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" Margin="0,10,0,5" />
+        </StackLayout>
     </StackLayout>
 </ContentPage>
