--- a/RecipeApp/Screens/RecipeDetailPage.xaml
+++ b/RecipeApp/Screens/RecipeDetailPage.xaml
@@ -7,13 +7,16 @@
              x:Class="RecipeApp.Screens.RecipeDetailPage"
              Title="RecipeDetailPage">
     <StackLayout Margin="16,16,16,16">
+
         <Label Text="{Binding Name}" FontSize="22" FontAttributes="Bold" HorizontalOptions="CenterAndExpand"/>
         <Label Text="Malzemeler:" FontSize="18" FontAttributes="Bold" Margin="0,10,0,5" />
         <Label Text="{Binding Ingredients}" />
+
         <Label Text="Yemek Tarifi:" FontSize="18" FontAttributes="Bold" Margin="0,10,0,5" />
         <Label Text="{Binding Instructions}" />
 
         <StackLayout VerticalOptions="EndAndExpand">
+        <Button Text="Malzemeleri market listesine ekle" Clicked="AddToMarketList_Clickedd" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" />
         <Label Text="Geri Sayım Aracı:" FontSize="18" FontAttributes="Bold" Margin="0,10,0,5" />
         <TimePicker x:Name="countdownPicker" Format="t" />
         <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
