--- a/RecipeApp/Screens/RecipeDetailPage.xaml
+++ b/RecipeApp/Screens/RecipeDetailPage.xaml
@@ -16,13 +16,13 @@
         <Label Text="{Binding Instructions}" />
 
         <StackLayout VerticalOptions="EndAndExpand">
-        <Button Text="Malzemeleri market listesine ekle" Clicked="AddToMarketList_Clickedd" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand" />
-        <Label Text="Geri Sayım Aracı:" FontSize="18" FontAttributes="Bold" Margin="0,10,0,5" />
+        <Button Text="Malzemeleri market listesine ekle" Clicked="AddToMarketList_Clickedd" HorizontalOptions="FillAndExpand" FontFamily="Avenir-Heavy" FontSize="22" VerticalOptions="CenterAndExpand" />
+        <Label Text="Geri Sayım Aracı:" FontSize="22" FontAttributes="Bold" Margin="0,10,0,5" />
         <TimePicker x:Name="countdownPicker" Format="t" />
         <StackLayout Orientation="Horizontal" HorizontalOptions="CenterAndExpand">
-            <Button Text="Başlat" WidthRequest="133" Clicked="StartCountdown" HorizontalOptions="CenterAndExpand" />
-            <Button Text="Durdur" WidthRequest="133" Clicked="StopCountdown"  HorizontalOptions="CenterAndExpand" />
-            <Button Text="Sıfırla" WidthRequest="133" Clicked="ResetCountdown" BackgroundColor="Red" HorizontalOptions="CenterAndExpand" />
+            <Button Text="Başlat" FontFamily="Avenir-Heavy" FontSize="22"  WidthRequest="133" Clicked="StartCountdown" HorizontalOptions="CenterAndExpand" />
+            <Button Text="Durdur" FontFamily="Avenir-Heavy" FontSize="22"  WidthRequest="133" Clicked="StopCountdown"  HorizontalOptions="CenterAndExpand" />
+            <Button Text="Sıfırla" FontFamily="Avenir-Heavy" FontSize="22"  WidthRequest="133" Clicked="ResetCountdown" BackgroundColor="Red" HorizontalOptions="CenterAndExpand" />
         </StackLayout>
         <Label x:Name="countdownLabel" Text="" FontSize="20" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" Margin="0,10,0,5" />
         </StackLayout>
