--- a/RecipeApp/Screens/Main.xaml
+++ b/RecipeApp/Screens/Main.xaml
@@ -17,7 +17,7 @@
                     <DataTemplate>
                         <ViewCell>
                             <StackLayout Orientation="Horizontal" Padding="10">
-                                <Label Text="{Binding Name}" VerticalOptions="CenterAndExpand" HorizontalOptions="StartAndExpand" />
+                                <Label Text="{Binding Name}" VerticalOptions="CenterAndExpand" FontFamily="Avenir" FontSize="22" HorizontalOptions="StartAndExpand" />
                                 <Button Text="Sil" Clicked="DeleteRecipeClicked" CommandParameter="{Binding Id}" HorizontalOptions="End" />
                             </StackLayout>
                         </ViewCell>
