--- a/RecipeApp/Screens/Marketlist.xaml
+++ b/RecipeApp/Screens/Marketlist.xaml
@@ -8,13 +8,13 @@
         
         <Label x:Name="emptyListLabel" Text="Market listen boş!" IsVisible="False" FontFamily="Avenir-Heavy" FontSize="22"  Margin="0,16,0,0" HorizontalOptions="CenterAndExpand" VerticalOptions="Start" />
 
-        <ListView x:Name="marketListView" HeightRequest="700" RowHeight="50" 
+        <ListView x:Name="marketListView" HeightRequest="680" RowHeight="50" 
                   SeparatorColor="Silver" SeparatorVisibility="Default" VerticalOptions="Start">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
                         <StackLayout Orientation="Horizontal">
-                            <Label Text="{Binding Name}" Margin="16,16,16,16" VerticalOptions="CenterAndExpand" />
+                            <Label Text="{Binding Name}" Margin="16,16,16,16" FontFamily="Avenir" FontSize="22" VerticalOptions="CenterAndExpand" />
                             <Button Text="Sil" FontFamily="Avenir-Heavy" FontSize="22" BackgroundColor="Red" TextColor="White" Command="{Binding DeleteCommand}" Clicked="OnDeleteClicked" CommandParameter="{Binding .}" HorizontalOptions="EndAndExpand"/>
                         </StackLayout>
                     </ViewCell>
@@ -22,8 +22,9 @@
                 
             </ListView.ItemTemplate>
         </ListView>
-
+        <Button Text="Tümünü Sil" FontFamily="Avenir-Heavy" WidthRequest="370" FontSize="22" BackgroundColor="Red" TextColor="White" Clicked="OnClearAllClicked" HorizontalOptions="CenterAndExpand" Margin="0,16,0,0"/>
         <StackLayout Orientation="Horizontal" VerticalOptions="EndAndExpand" HorizontalOptions="CenterAndExpand">
+
             <Entry x:Name="itemEntry" Placeholder="Ürün Adı" WidthRequest="300"/>
             <Button Text="Ekle" FontFamily="Avenir-Heavy" FontSize="22"  Clicked="OnAddClicked" />
         </StackLayout>
